fix: Reduce grid-gap in Twake style

--- a/src/styles/lists.styl
+++ b/src/styles/lists.styl
@@ -18,7 +18,7 @@ $tablet-tile-with-gutter = $tablet-tile-size + $app-grid-gutter
     margin-bottom rem(14)
 
     &--gutter
-        grid-gap rem(14) 2rem
+        grid-gap rem(14) 1rem
 
     // Caution: this section is full of magic numbers
     // TODO: refactor this to use computed values to avoid glitches in the grid system
